--- a/src/shoeShop/style.module.css
+++ b/src/shoeShop/style.module.css
@@ -1,3 +1,4 @@
 .background {
   background-image: url("https://images.unsplash.com/photo-1518002171953-a080ee817e1f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80");
+  background-size: cover;
 }
